fixed bug with steps

--- a/my-decorator-post.yml
+++ b/my-decorator-post.yml
@@ -1,4 +1,5 @@
+steps:
 - task: CmdLine@2
   displayName: 'Run my script (injected from decorator) - post'
   inputs:
-    script: dir
+    script: 'echo post decorator'
