--- a/my-decorator-post.yml
+++ b/my-decorator-post.yml
@@ -2,4 +2,9 @@ steps:
 - task: CmdLine@2
   displayName: 'Run my script (injected from decorator) - post'
   inputs:
-    script: 'echo post decorator'
+    script: |
+     echo 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+     echo
+     echo post decorator action
+     echo 
+     echo 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
