--- a/my-decorator-pre.yml
+++ b/my-decorator-pre.yml
@@ -2,4 +2,9 @@ steps:
 - task: CmdLine@2
   displayName: 'Run my script (injected from decorator) - pre'
   inputs:
-    script: 'echo pre decorator'
+    script: |
+        echo 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        echo
+        echo post decorator action
+        echo 
+        echo 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
